compiler/test/conformance/invalid/inv_break_outside_loop.tu
// INVÁLIDO: break fora de qualquer loop (deve reprovar)
fn main() {
  break
}
